# lab05-troca-figurinhas-segobinho

.github/classroom/: autograding.json
lab05-troca-figurinhas-GabrielScremim/: README.md
lab05-troca-figurinhas-GabrielScremim/labs/atividade-05/: main.py  pyproject.toml  readme.md  test_scenarios.py
lab05-troca-figurinhas-GabrielScremim/labs/atividade-05/input/: 01.in  02.in  03.in
labs/atividade-05/: main.py  pyproject.toml  readme.md  test_scenarios.py
