[tool.poetry]
name = "atividade-05"
version = "0.1.0"
description = "Atividade da disciplina de algoritmo e estrutura de dados"
authors = ["Mario H. Adaniya <mario.adaniya@unifil.br>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
